# supply_node

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  entrypoint-web.sh  env.example  pyproject.toml
config/: settings.py  urls.py  utils.py  wsgi.py
readme/: Appendix.md  DETAILS.md  Note.md  TODO.md
requirements/: base.txt  dev.txt  prod.txt
supply/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
supply/fixtures/: node.json  nodes.json  product.json  products.json
supply/management/commands/: load_initial_supply_data.py
supply/migrations/: 0001_initial.py
user/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
user/fixtures/: user.json  users.json
user/management/commands/: create_users.py  load_initial_user_data.py
user/migrations/: 0001_initial.py
