[project]
name = "supply_node"
version = "0.1.1"
description = "Online platform of electronics trading network (certification work)"
authors = [
    {name = "Станислав Маяцкий",email = "stasm226@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"

[tool.black]
line-length = 119
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 3
include_trailing_comma = true
known_django = ["django"]
known_first_party = ["apps", "habit_tracker"]
known_third_party = ["rest_framework"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip_gitignore = true
skip = ["migrations"]

[tool.flake8]
max-line-length = 119
extend-ignore = ["E203", "W503"]
exclude = ".git,__pycache__,migrations,venv,.venv"
max-complexity = 10

[tool.mypy]
mypy_path = "."
exclude = 'venv,migrations'
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
show_error_codes = true
follow_imports = "silent"

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
